--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,20 @@
   "description": "Automatically fill address into purolator webform",
   "version": "0.1",
   "manifest_version": 3,
+  "icons": {
+    "16": "favicon_16.png",
+    "32": "favicon_32.png",
+    "48": "favicon_48.png"
+  },
   "permissions": [
     "tabs"
   ],
   "content_scripts": [
     {
-      "matches": ["http://localhost/index.html"],
+      "matches": [
+        "http://localhost/index.html",
+        "*://*.purolator.com/*"
+      ],
       "js": [
         "content.js"
       ]
@@ -18,6 +26,11 @@
     "service_worker": "background.js"
   },
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icons": {
+      "16": "favicon_16.png",
+      "32": "favicon_32.png",
+      "48": "favicon_48.png"
+    }
   }
 }
