--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "name": "Purolator Parser",
   "description": "Automatically fill address into purolator webform",
-  "version": "0.1",
+  "version": "0.2",
   "manifest_version": 3,
   "icons": {
-    "16": "favicon_16.png",
-    "32": "favicon_32.png",
-    "48": "favicon_48.png"
+    "16": "/icons/favicon_16.png",
+    "32": "/icons/favicon_32.png",
+    "48": "/icons/favicon_48.png"
   },
   "permissions": [
     "tabs"
@@ -15,22 +15,22 @@
     {
       "matches": [
         "http://localhost/index.html",
-        "*://*.purolator.com/*"
+        "https://*.purolator.com/*"
       ],
       "js": [
-        "content.js"
+        "/src/content.js"
       ]
     }
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "/src/background.js"
   },
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "/src/popup.html",
     "default_icons": {
-      "16": "favicon_16.png",
-      "32": "favicon_32.png",
-      "48": "favicon_48.png"
+      "16": "/icons/favicon_16.png",
+      "32": "/icons/favicon_32.png",
+      "48": "/icons/favicon_48.png"
     }
   }
 }
